--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
+        "outDir": "build",
         "target": "es6",
         "module": "commonjs",
         "lib": ["es6", "dom"],
