--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "typescript": "4.5.4",
     "utf-8-validate": "5.0.7",
     "ytdl": "1.4.1",
-    "ytdl-core": "4.9.2",
+    "ytdl-core": "^4.11.2",
     "ytsearcher": "1.2.4",
     "zlib-sync": "0.1.7"
   },
