--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
   "author": "Jay Sabherwal",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "0.11.0",
-    "@discordjs/opus": "0.7.0",
-    "@discordjs/rest": "0.2.0-canary.0",
-    "@discordjs/voice": "0.7.5",
-    "bufferutil": "4.0.5",
-    "discord-api-types": "0.26.0",
-    "discord.js": "13.5.0",
-    "dotenv": "8.2.0",
+    "@discordjs/builders": "1.4.0",
+    "@discordjs/opus": "0.9.0",
+    "@discordjs/rest": "1.5.0",
+    "@discordjs/voice": "0.14.0",
+    "bufferutil": "4.0.7",
+    "discord-api-types": "0.37.28",
+    "discord.js": "14.7.1",
+    "dotenv": "16.0.3",
     "erlpack": "github:discord/erlpack",
-    "ffmpeg-static": "4.4.0",
-    "libsodium-wrappers": "0.7.9",
-    "typescript": "4.5.4",
-    "utf-8-validate": "5.0.7",
+    "ffmpeg-static": "5.1.0",
+    "libsodium-wrappers": "0.7.10",
+    "typescript": "4.9.4",
+    "utf-8-validate": "6.0.0",
     "ytdl": "1.4.1",
     "ytdl-core": "^4.11.2",
     "ytsearcher": "1.2.4",
     "zlib-sync": "0.1.7"
   },
   "devDependencies": {
-    "@types/node": "16.11.10",
-    "nodemon": "2.0.15",
-    "ts-node": "10.4.0"
+    "@types/node": "18.11.18",
+    "nodemon": "2.0.20",
+    "ts-node": "10.9.1"
   }
 }
