--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "erlpack": "github:discord/erlpack",
     "ffmpeg-static": "5.1.0",
     "libsodium-wrappers": "0.7.10",
+    "query-string": "6.14.1",
+    "superagent": "^8.0.8",
     "typescript": "4.9.4",
     "utf-8-validate": "6.0.0",
-    "youtube-search": "^1.1.6",
     "ytdl": "1.4.1",
     "ytdl-core": "^4.11.2",
     "zlib-sync": "0.1.7"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
+    "@types/query-string": "^6.3.0",
+    "@types/superagent": "^4.1.16",
     "nodemon": "2.0.20",
     "ts-node": "10.9.1"
   }
