--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "outDir": "build",
-        "target": "es6",
+        "target": "ES2020",
         "module": "commonjs",
         "lib": ["es6", "dom"],
         "types": ["node"],
