--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@discordjs/builders": "1.6.5",
     "@discordjs/opus": "0.9.0",
-    "@discordjs/rest": "2.0.1",
+    "@discordjs/rest": "^2.0.0",
     "@discordjs/voice": "0.16.0",
     "bufferutil": "4.0.7",
     "discord-api-types": "0.37.60",
@@ -25,6 +25,7 @@
     "typescript": "5.2.2",
     "utf-8-validate": "6.0.3",
     "youtube-ext": "^1.1.16",
+    "ytdl-core": "4.11.5",
     "zlib-sync": "0.1.8"
   },
   "devDependencies": {
