--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "superagent": "^8.1.2",
     "typescript": "5.2.2",
     "utf-8-validate": "6.0.3",
-    "youtube-ext": "^1.1.16",
+    "youtube-search": "^1.1.6",
     "ytdl-core": "4.11.5",
     "zlib-sync": "0.1.8"
   },
