--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "erlpack": "github:discord/erlpack",
     "ffmpeg-static": "5.2.0",
     "libsodium-wrappers": "0.7.13",
+    "play-dl": "^1.9.7",
     "superagent": "^8.1.2",
     "typescript": "5.2.2",
     "utf-8-validate": "6.0.3",
     "winston": "^3.11.0",
-    "youtube-search": "^1.1.6",
-    "ytdl-core": "4.11.5",
+    "ytmusic-api": "^5.2.1",
     "zlib-sync": "0.1.8"
   },
   "devDependencies": {
