* Use different dependancy for streaming audio * Add option autocomplete (using spotify api) * Change Video to Song in domain

--- a/package.json
+++ b/package.json
@@ -4,28 +4,32 @@
   "description": "Expandable TypeScript Discord Bot",
   "main": "index.js",
   "scripts": {
-    "start-dev": "nodemon",
+    "start": "nodemon",
     "build": "tsc"
   },
   "author": "Jay Sabherwal",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "1.6.5",
+    "@discordjs/builders": "1.8.2",
     "@discordjs/opus": "0.9.0",
-    "@discordjs/rest": "^2.0.0",
-    "@discordjs/voice": "0.16.0",
+    "@discordjs/rest": "2.3.0",
+    "@discordjs/voice": "0.17.0",
+    "@types/spotify-web-api-node": "^5.0.11",
     "bufferutil": "4.0.7",
-    "discord-api-types": "0.37.60",
-    "discord.js": "14.13.0",
+    "discord-api-types": "0.37.89",
+    "discord-ytdl-core": "^5.0.4",
+    "discord.js": "14.15.3",
     "dotenv": "16.3.1",
     "erlpack": "github:discord/erlpack",
     "ffmpeg-static": "5.2.0",
     "libsodium-wrappers": "0.7.13",
-    "play-dl": "^1.9.7",
+    "pino": "^8.19.0",
+    "spotify-web-api-node": "^5.0.2",
     "superagent": "^8.1.2",
     "typescript": "5.2.2",
     "utf-8-validate": "6.0.3",
-    "winston": "^3.11.0",
+    "youtube-sr": "^4.3.11",
+    "ytdl-core": "^4.11.5",
     "ytmusic-api": "^5.2.1",
     "zlib-sync": "0.1.8"
   },
