--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 DISCORD_TOKEN=
-YOUTUBE_API_KEY=
-DEV=true
 
-# ONLY FOR DEVELOPING
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
+NODE_ENV=dev
 CLIENT_ID=
 GUILD_ID=
